Updates, Bee Solution, & Fossil Tweaks
Updated a few mods

Decided to late game material bees like Titanium and Uranium require to be in one of the dimensions the metal is found in order to work so you can't just tier skip via bees

Changed it so that fossils only spawn in certain biomes but spawn more frequently and in larger veins, same with permafrost, this is so people who don't want them won't run into them as often.

--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -13,20 +13,11 @@ world-1608634398 {
 
 
 world-78688046 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=paleon
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=@fossil
     B:overlayEnabled=true
 }
 
@@ -121,7 +112,7 @@ world1764654614 {
     B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=dungeon
+    S:filterText=iced
     B:overlayEnabled=true
 }
 
@@ -141,7 +132,7 @@ world1855637915 {
     B:cheatItemsEnabled=true
     S:defaultFluidContainerItem=
     B:editEnabled=false
-    S:filterText=bolt
+    S:filterText=@betterend
     B:overlayEnabled=true
 }
 
@@ -157,11 +148,20 @@ world1855637982 {
 
 
 world1945624744 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@med
+    S:filterText=fossil
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
