--- a/.minecraft/hei_bookmarks.ini
+++ b/.minecraft/hei_bookmarks.ini
@@ -26,12 +26,6 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconi
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_legs",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_chest",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"draconicevolution:draconic_boots",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:84s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"enderio:item_alloy_ingot",Count:1,Damage:6s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:ingot",Count:1,Damage:9s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:57s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:58s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"techguns:itemshared",Count:1,Damage:59s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"srparasites:lurecomponent1",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"contenttweaker:compressedmangler",Count:1,Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"nuclearcraft:fusion_core",Count:1,Damage:0s}
@@ -41,4 +35,5 @@ T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"galaxyspace:assembly_mach
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"railcraft:track_outfitted",Count:1,tag:{railcraft:{rail:"railcraft_iron",kit:"railcraft_locking"}},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{},"astralsorcery:cap_item_amulet_holder":{AS_Amulet_HolderLeast:-7856832193709446652L,AS_Amulet_HolderMost:5100163605150778045L}},id:"techguns:pulserifle",Count:1,tag:{ammo:12s,ammovariant:"default",camo:0b},Damage:0s}
 T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"minecraft:potion",Count:1,Damage:0s}
-T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"sereneseasons:season_clock",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"extrabees:honey_drop",Count:1,Damage:0s}
+T:{ForgeCaps:{"wizardryutils:summoneditemdata":{}},id:"extrabees:honey_comb",Count:1,Damage:4s}
