--- a/.minecraft/config/fossil.cfg
+++ b/.minecraft/config/fossil.cfg
@@ -5,7 +5,7 @@ all {
     I:"Alligator Gar Spawn Rarity"=3
 
     # True if vanilla animals should run away from dinosaurs [default: false]
-    B:"Animals Fear Dinosaurs"=false
+    B:"Animals Fear Dinosaurs"=true
 
     # True if Anu should be able to place blocks [default: true]
     B:"Anu block placing"=true
@@ -86,7 +86,7 @@ all {
     B:"Generate Desert Academies"=false
 
     # True if Fossil Dig Sites are to generate naturally [default: true]
-    B:"Generate Fossil Dig Sites"=true
+    B:"Generate Fossil Dig Sites"=false
 
     # True if Fossil Ores are to generate naturally [default: true]
     B:"Generate Fossil Ores"=true
@@ -110,7 +110,7 @@ all {
     B:"Generate Volcanic Rock"=false
 
     # Whether to generate volcano biomes or not [default: true]
-    B:"Generate Volcano Biomes"=true
+    B:"Generate Volcano Biomes"=false
 
     # True if Dinosaurs can heal with food [default: true]
     B:"Healing Dinos"=true
@@ -191,7 +191,7 @@ all {
     I:"Treasure Room Dimension ID"=-24
 
     # Volcano Spawn Weight. Higher number = more common [range: 0 ~ 10000, default: 1]
-    I:"Volcano Spawn Weight"=1
+    I:"Volcano Spawn Weight"=0
 
     # True if Whips can be used to tame some dinosaurs [default: true]
     B:"Whip to Tame Dinos"=true
@@ -201,7 +201,6 @@ all {
 "ore generation dimensions" {
     # List of Dimension IDs to spawn structures like digsites and temples in
     I:all <
-        0
      >
 }
 
@@ -209,7 +208,6 @@ all {
 "overworld structure dimensions" {
     # List of Dimension IDs to spawn Fossil and Permafrost ores in
     I:all <
-        0
      >
 }
 
