--- a/.minecraft/config/srpextra/SRPEConfigSystem.cfg
+++ b/.minecraft/config/srpextra/SRPEConfigSystem.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.2
+~CONFIG_VERSION: 0.31
 
 ##########################################################################################################
 # main
@@ -11,14 +11,20 @@
 ##########################################################################################################
 
 main {
-    # Mob Cap [range: 0 ~ 999, default: 20]
-    I:SRPExtraMobCap=20
+    # Replace the original entity spawning from SRP with the custom SRPExtra. [default: true]
+    B:"*useSRPExtraEntitySpawn"=true
 
-    # Each Player will increase the mob cap by this value. [range: 0 ~ 999, default: 3]
-    I:SRPExtraMobCapPlusPlayer=3
+    # Add a list of SRPExtra Addons phase spawn? [default: true]
+    B:":addSRPExtraAddonsPhaseSpawnList"=true
 
-    # Number of ticks between attempts to spawn an entity. [range: 1 ~ 999, default: 30]
-    I:countTickSpawn=30
+    # Add a list of SRPExtra phase spawn? [default: true]
+    B:":addSRPExtraPhaseSpawnList"=true
+
+    # Add a list of SRP phase spawn? [default: true]
+    B:":addSRPPhaseSpawnList"=true
+
+    # Number of ticks between attempts to spawn an entity. [range: 1 ~ 999, default: 40]
+    I:countTickSpawn=40
 
     # The number of ticks that will be added to "countTickSpawn" for each player. [range: 0 ~ 999999, default: 5]
     I:countTickSpawnPlusPlayer=5
@@ -29,8 +35,14 @@ main {
     # Maximum distance above and below the player at which entities can spawn. [range: 4 ~ 128, default: 32]
     I:maxDistanceSpawnEntityAboveAndBelow=32
 
+    # Maximum height at which the parasite can spawned. [range: 1 ~ 254, default: 250]
+    I:maxYCoordinateParasiteSpawn=250
+
     # Minimum distance from players at which entities can spawn. [range: 4 ~ 256, default: 24]
     I:minDistanceSpawnEntity=24
+
+    # Minimum height at which the parasite can spawned. [range: 1 ~ 254, default: 5]
+    I:minYCoordinateParasiteSpawn=5
 
     # Starting from this phase, parasites can spawn at night in open areas. [range: 0 ~ 10, default: 2]
     I:parasiteStopHidingNight=2
@@ -50,8 +62,9 @@ main {
 #  "5" is the maximum group count,
 #  "0" is the type spawn mob [0 - earth, 1 - water, 2 - liquid],
 #  "0,1,-1" is the dimension ID where the entity can spawn (If 'all' is entered, the mob will spawn in any dimension. If 'default' is entered, it will spawn only in -1, 0, and 1 (If a mod for parasitic dimension is installed, its identifiers will also be added automatically.),
-#  "minecraft:forest,minecraft:ocean" These are the biomes where entities will spawn (If 'all' is entered, the entity will spawn in any biome).
-#     Examples: "25;srparasites:fer_human;2;5;0;0,1,-1;minecraft:forest,minecraft:ocean", "25;srparasites:fer_human;1;3;0;default;all", "25;srparasites:fer_human;2;5;2;0,1,-1;all", "25;srparasites:fer_human;2;5;0;all;minecraft:forest,minecraft:ocean".
+#  "minecraft:forest,minecraft:ocean" These are the biomes where entities will spawn (If 'all' is entered, the entity will spawn in any biome). Support: blacklist biomes(!minecraft:forest, ..), biome types(forest,ocean, ..) and blacklist biome type(!forest, !dry, ..).
+#  (Optional) "node,150||colony,250" - To spawn, need a node or a colony at a distance(150-node,250-colony), or "node,150&&colony,250" - To spawn, need a node and a colony at a distance(150-node,250-colony), or "node,150" - To spawn, need a node at a distance(150-node).
+#     Examples: "25;srparasites:fer_human;2;5;0;0,1,-1;minecraft:forest,ocean", "25;srparasites:fer_human;1;3;0;default;all;node,150", "25;srparasites:fer_human;2;5;2;0,1,-1;all;colony,150&&node,150", "25;srparasites:fer_human;2;5;0;all;forest,!minecraft:birch_forest".
 ##########################################################################################################
 
 phase {
@@ -63,40 +76,44 @@ phase {
     S:"Phase 1" <
      >
 
-    # Custom SRPExtra Phase 2 Spawn Entity List [default: [5;srpextra:hijacked_creeper;1;2;0;default;all], [5;srpextra:hijacked_skeleton;1;2;0;default;all], [2;srpextra:stalker;1;2;0;default;all]]
+    # Custom SRPExtra Phase 2 Spawn Entity List [default: [5;srpextra:sim_witch;1;2;0;all;all], [2;srpextra:hijacked_creeper;1;2;0;all;all], [2;srpextra:hijacked_skeleton;1;2;0;all;all], [1;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 2" <
-        5;srpextra:hijacked_creeper;1;2;0;default;all
-        5;srpextra:hijacked_skeleton;1;2;0;default;all
-        2;srpextra:stalker;1;2;0;default;all
+        5;srpextra:sim_witch;1;2;0;all;all
+        2;srpextra:hijacked_creeper;1;2;0;all;all
+        2;srpextra:hijacked_skeleton;1;2;0;all;all
+        1;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 3 Spawn Entity List [default: [5;srpextra:hijacked_creeper;1;2;0;default;all], [5;srpextra:hijacked_skeleton;1;3;0;default;all], [15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river], [3;srpextra:stalker;1;2;0;default;all]]
+    # Custom SRPExtra Phase 3 Spawn Entity List [default: [8;srpextra:sim_witch;1;2;0;all;all], [5;srpextra:hijacked_creeper;1;2;0;all;all], [5;srpextra:hijacked_skeleton;1;3;0;all;all], [25;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 3" <
-        5;srpextra:hijacked_creeper;1;2;0;default;all
-        5;srpextra:hijacked_skeleton;1;3;0;default;all
-        15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river
-        3;srpextra:stalker;1;2;0;default;all
+        8;srpextra:sim_witch;1;2;0;all;all
+        5;srpextra:hijacked_creeper;1;2;0;all;all
+        5;srpextra:hijacked_skeleton;1;3;0;all;all
+        25;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
+        2;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 4 Spawn Entity List [default: [8;srpextra:hijacked_creeper;1;3;0;default;all], [15;srpextra:hijacked_skeleton;1;3;0;default;all], [15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river], [3;srpextra:stalker;1;2;0;default;all]]
+    # Custom SRPExtra Phase 4 Spawn Entity List [default: [10;srpextra:sim_witch;1;3;0;all;all], [8;srpextra:hijacked_creeper;1;3;0;all;all], [15;srpextra:hijacked_skeleton;1;3;0;all;all], [30;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 4" <
-        8;srpextra:hijacked_creeper;1;3;0;default;all
-        15;srpextra:hijacked_skeleton;1;3;0;default;all
-        15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river
-        3;srpextra:stalker;1;2;0;default;all
+        10;srpextra:sim_witch;1;3;0;all;all
+        8;srpextra:hijacked_creeper;1;3;0;all;all
+        15;srpextra:hijacked_skeleton;1;3;0;all;all
+        30;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
+        2;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 5 Spawn Entity List [default: [10;srpextra:hijacked_creeper;1;3;0;default;all], [15;srpextra:hijacked_skeleton;1;3;0;default;all], [15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river], [3;srpextra:stalker;1;2;0;default;all]]
+    # Custom SRPExtra Phase 5 Spawn Entity List [default: [8;srpextra:sim_witch;1;2;0;all;all], [10;srpextra:hijacked_creeper;1;3;0;all;all], [15;srpextra:hijacked_skeleton;1;3;0;all;all], [35;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 5" <
-        10;srpextra:hijacked_creeper;1;3;0;default;all
-        15;srpextra:hijacked_skeleton;1;3;0;default;all
-        15;srparasites:pri_devourer;1;2;1;default;minecraft:ocean,minecraft:beach,minecraft:river
-        3;srpextra:stalker;1;2;0;default;all
+        8;srpextra:sim_witch;1;2;0;all;all
+        10;srpextra:hijacked_creeper;1;3;0;all;all
+        15;srpextra:hijacked_skeleton;1;3;0;all;all
+        35;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
+        2;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 6 Spawn Entity List [default: [25;srparasites:pri_devourer;1;3;1;default;minecraft:ocean,minecraft:beach,minecraft:river]]
+    # Custom SRPExtra Phase 6 Spawn Entity List [default: [40;srparasites:pri_devourer;1;3;1;all;ocean,beach,river]]
     S:"Phase 6" <
-        25;srparasites:pri_devourer;1;3;1;default;minecraft:ocean,minecraft:beach,minecraft:river
+        40;srparasites:pri_devourer;1;3;1;all;ocean,beach,river
      >
 
     # Custom SRPExtra Phase 7 Spawn Entity List [default: ]
@@ -121,6 +138,7 @@ phase {
 # phasefix
 #--------------------------------------------------------------------------------------------------------#
 # SRP Phase Spawn Entity List Fix
+# By default, most of the list spawns in the parasite biome without the need for a Phase Spawn List
 ##########################################################################################################
 
 phasefix {
