Dino Quest & Fish's Update
Finished the quests for Fossils mod

Updated Thaumic Fixer and Fish's Undead Rising, the new mobs might need to have spawns set as the changelog said they spawn in biomes that aren't in vanilla 1.12

--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -118,11 +118,20 @@ world1764654614 {
 
 
 world184824965 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=armor stand
+    S:filterText=@fish's
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -148,20 +157,11 @@ world1855637982 {
 
 
 world1945624744 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
     S:filterText=fossil
-
-    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
