--- a/.minecraft/config/thaumcraftfix.cfg
+++ b/.minecraft/config/thaumcraftfix.cfg
@@ -99,6 +99,13 @@ general {
 
     }
 
+    item {
+        # Enables/disables the Primordial Pearl damage value fix.
+        # This fix will prevent vanilla and other mods from repairing Primordial Pearls,
+        # but may cause compatibility issues with existing Thaumcraft addons.
+        B:primordialPearlDamageFix=true
+    }
+
 }
 
 
