Quests, Shaders, & Ore Tweaks
Added New Quests

Added Complimentary Shaders, aren't always functional.

Tweaked Ore Generation

--- a/.minecraft/config/railcraft/blocks.cfg
+++ b/.minecraft/config/railcraft/blocks.cfg
@@ -346,7 +346,7 @@ subblocks {
     B:ore_metal_poor_zinc=false
     B:ore_metal_silver=false
     B:ore_metal_tin=false
-    B:ore_metal_zinc=false
+    B:ore_metal_zinc=true
     B:ore_saltpeter=true
     B:ore_sulfur=true
     B:pearlized_brick=true
