--- a/.minecraft/config/Netherending Ores.cfg
+++ b/.minecraft/config/Netherending Ores.cfg
@@ -553,7 +553,7 @@ recipes {
 
         "thermal expansion" {
             # Enable full Induction Smelter output. Do not reduce output for augment compensation, uses much more energy. [default: false]
-            B:"Induction Smelter full output"=false
+            B:"Induction Smelter full output"=true
 
             # Induction Smelter full output amount factor. [range: 0.5 ~ 3.0, default: 1.0]
             S:"Induction Smelter full output amount factor"=1.0
@@ -568,7 +568,7 @@ recipes {
             S:"Induction Smelter reduced output energy factor"=0.6
 
             # Enable full Pulverizer output. Do not reduce output for augment compensation, uses much more energy. [default: false]
-            B:"Pulverizer full output"=false
+            B:"Pulverizer full output"=true
 
             # Pulverizer full output amount factor. [range: 0.5 ~ 3.0, default: 1.0]
             S:"Pulverizer full output amount factor"=1.0
@@ -583,7 +583,7 @@ recipes {
             S:"Pulverizer reduced output energy factor"=0.6
 
             # Enable full Redstone Furnace output. Do not reduce output for augment compensation, uses much more energy. [default: false]
-            B:"Redstone Furnace full output"=false
+            B:"Redstone Furnace full output"=true
 
             # Redstone Furnace full output amount factor. [range: 0.5 ~ 3.0, default: 1.0]
             S:"Redstone Furnace full output amount factor"=1.0
