--- a/.minecraft/config/jei/worldSettings.cfg
+++ b/.minecraft/config/jei/worldSettings.cfg
@@ -13,11 +13,20 @@ world-1608634398 {
 
 
 world-78688046 {
+    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
+
+    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
+
+    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
+
+    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@fossil
+    S:filterText=saw
+
+    # Show the list of ingredients next to open GUIs.
     B:overlayEnabled=true
 }
 
@@ -118,20 +127,11 @@ world1764654614 {
 
 
 world184824965 {
-    # Show the list of bookmarks next to open GUIs.
     B:bookmarkOverlayEnabled=true
-
-    # Give items instead of showing the recipe.
     B:cheatItemsEnabled=true
-
-    # Default item to use to fill up fluids when clicking on a fluid ingredient in the menu, (format: item_name@meta)
     S:defaultFluidContainerItem=
-
-    # Hide and unhide ingredients by clicking them in the list.
     B:editEnabled=false
-    S:filterText=@fish's
-
-    # Show the list of ingredients next to open GUIs.
+    S:filterText=zinc
     B:overlayEnabled=true
 }
 
