--- a/.gitignore
+++ b/.gitignore
@@ -1,77 +1,46 @@
-
-/.minecraft/journeymap/data
-.minecraft/journeymap/journeymap.log
-/.minecraft/logs
-/.minecraft/saves
-.minecraft/usercache.json
-.minecraft/options.txt
-.minecraft/logs/onslaught.log.0
 .minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
+.minecraft/config/AppliedEnergistics2/VersionChecker.cfg
+.minecraft/config/AppliedEnergistics2/items.csv
+.minecraft/config/UniqueNames.txt
+.minecraft/config/astralsorcery/amulet_enchantments.cfg
+.minecraft/config/buildcraft/detailed.properties
+.minecraft/config/splash.properties
+.minecraft/config/startuptimer/startup_times.json
+.minecraft/config/thaumicjei_itemstack_aspects.json
+.minecraft/crafttweaker.log
+.minecraft/dropt.log
+.minecraft/hei_bookmarks.ini
+.minecraft/hs_err_pid21828.log
+.minecraft/icon.png
+.minecraft/journeymap/config/5.7/journeymap.minimap.config
+.minecraft/journeymap/journeymap.log
+.minecraft/llibrary/debug/net.minecraft.client.model.ModelBiped.class
+.minecraft/llibrary/debug/net.minecraft.client.renderer.EntityRenderer.class
+.minecraft/llibrary/debug/net.minecraft.client.renderer.RenderGlobal.class
+.minecraft/llibrary/debug/net.minecraftforge.client.ForgeHooksClient.class
+.minecraft/logs/buildcraft/scripts/buildcraft/book.log
+.minecraft/logs/debug.log
+.minecraft/logs/latest.log
 .minecraft/logs/onslaught.log.0
 .minecraft/logs/onslaught.log.1
 .minecraft/logs/onslaught.log.2
 .minecraft/logs/onslaught.log.3
 .minecraft/logs/onslaught.log.4
-/natives
-.minecraft/llibrary/debug/net.minecraftforge.client.ForgeHooksClient.class
-.minecraft/llibrary/debug/net.minecraft.client.renderer.RenderGlobal.class
-.minecraft/llibrary/debug/net.minecraft.client.renderer.EntityRenderer.class
-.minecraft/llibrary/debug/net.minecraft.client.model.ModelBiped.class
-.minecraft/config/splash.properties
-.minecraft/logs/debug.log
-.minecraft/logs/latest.log
-.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
-.minecraft/usercache.json
-.minecraft/config/AppliedEnergistics2/items.csv
-.minecraft/config/AppliedEnergistics2/items.csv
-.minecraft/crafttweaker.log
-.minecraft/journeymap/journeymap.log
-.minecraft/crafttweaker.log
-/.minecraft/journeymap
-/.minecraft/logs
-.minecraft/logs/debug.log
 .minecraft/options.txt
-.minecraft/usercache.json
-instance.cfg
-/.minecraft/logs/buildcraft
-.minecraft/config/startuptimer/startup_times.json
+.minecraft/optionsof.txt
+.minecraft/optionsshaders.txt
 .minecraft/patchouli_data.json
-.minecraft/journeymap/config/5.7/journeymap.minimap.config
-.minecraft/journeymap/journeymap.log
-.minecraft/logs/buildcraft/scripts/buildcraft/book.log
-/.minecraft/logs/buildcraft
-.minecraft/dropt.log
-.minecraft/hs_err_pid21828.log
-.minecraft/dropt.log
-/.minecraft/journeymap
-.minecraft/dropt.log
-.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
-.minecraft/usercache.json
+.minecraft/shaderpacks/ComplementaryShaders_v4.7.1.zip.txt
 .minecraft/usercache.json
 .minecraft/usernamecache.json
-/.minecraft/config/BiomeTweaker/output
-.minecraft/config/splash.properties
-.minecraft/crafttweaker.log
-.minecraft/journeymap/journeymap.log
-.minecraft/config/startuptimer/startup_times.json
-/.minecraft/crash-reports
-.minecraft/config/UniqueNames.txt
-.minecraft/config/splash.properties
 /.minecraft/assets/galacticraftMaps
-.minecraft/config/UniqueNames.txt
-.minecraft/journeymap/config/5.7/journeymap.minimap.config
-.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
-.minecraft/config/AppliedEnergistics2/items.csv
-.minecraft/config/AppliedEnergistics2/VersionChecker.cfg
-.minecraft/config/astralsorcery/amulet_enchantments.cfg
-.minecraft/config/buildcraft/detailed.properties
-.minecraft/config/astralsorcery/amulet_enchantments.cfg
+/.minecraft/config/BiomeTweaker/output
+/.minecraft/crash-reports
+/.minecraft/journeymap
+/.minecraft/journeymap/data
+/.minecraft/logs
+/.minecraft/logs/buildcraft
+/.minecraft/saves
+/natives
 instance.cfg
-.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
-.minecraft/config/splash.properties
-.minecraft/config/thaumicjei_itemstack_aspects.json
-.minecraft/config/UniqueNames.txt
-.minecraft/config/UniqueNames.txt
-.minecraft/config/UniqueNames.txt
-instance.cfg
-.minecraft/config/buildcraft/detailed.properties
+mmc-pack.json
