--- a/.minecraft/config/extrautils2.cfg
+++ b/.minecraft/config/extrautils2.cfg
@@ -148,6 +148,15 @@ energy {
 gameplay {
     # Add an entity id (mod:name) to this list to prevent cursed earth from spawning it. [default: ]
     S:"Cursed Earth Entity BlackList" <
+	techguns:supermutantelite
+	techguns:supermutantheavy
+	techguns:supermutantbasic
+	techguns:stormtrooper
+	techguns:outcast
+	techguns:armysoldier
+	techguns:attackhelicopter
+	techguns:commando
+	techguns:dictatordave
      >
     B:"Quantum Quarry: Enable Nether/End biome generation (has been buggy)"=false
 
