Orechid, Alfheim, CyberWare Progress
Figured out how to embed links and images into quests

The Cyberware quest has an example for link and the Electrobob's wizardry has an example of almost correct image embed (almost got it down)

Removed Orechid recipes that allowed you to skip progression

Replaced Phosphor with Alfheim as it is straight up better and is a step towards being able to use java 21

Added ReWired, an addon of Cyberware

Changed CyberWare recipes to fit them into progression better, they are up for change though

Started CyberWare quests

Added temporary Data Model for Wisps, will either remove or finish when DME author tells me how to differentiate NBT in their config

Updated SRP addons

--- a/.minecraft/config/srpextra/SRPEConfigGraphic.cfg
+++ b/.minecraft/config/srpextra/SRPEConfigGraphic.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.31
+~CONFIG_VERSION: 0.4
 
 ##########################################################################################################
 # +main
@@ -21,8 +21,20 @@
 ##########################################################################################################
 
 graphic {
-    # Entities from the mod will be rendered (if possible) with glowing eyes. [default: true]
-    B:useGlowingEyes=true
+    # Entities from the mod will be rendered (if possible(false)) with glowing eyes. [default: false]
+    B:useGlowingEyes=false
+}
+
+
+##########################################################################################################
+# parasite_vision
+#--------------------------------------------------------------------------------------------------------#
+# Parasite Vision Settings
+##########################################################################################################
+
+parasite_vision {
+    # Add shaders for the parasite's point of view? [default: true]
+    B:useParasiteVision=true
 }
 
 
