--- a/.minecraft/config/srpextra/SRPEConfigSystem.cfg
+++ b/.minecraft/config/srpextra/SRPEConfigSystem.cfg
@@ -1,6 +1,21 @@
 # Configuration file
 
-~CONFIG_VERSION: 0.31
+~CONFIG_VERSION: 0.4
+
+##########################################################################################################
+# compatibility
+#--------------------------------------------------------------------------------------------------------#
+# Compatibility Settings
+##########################################################################################################
+
+compatibility {
+    # SRP [default: true]
+    B:SRPCompatibility=true
+
+    # Removes the spawn of Nest and Flesh Worm. [default: true]
+    B:nocubessrpnestsCompatibility=true
+}
+
 
 ##########################################################################################################
 # main
@@ -11,8 +26,11 @@
 ##########################################################################################################
 
 main {
-    # Replace the original entity spawning from SRP with the custom SRPExtra. [default: true]
-    B:"*useSRPExtraEntitySpawn"=true
+    # If SRPExtra Phase Spawn is disabled, should the mob lists be added to SRP Phase Spawn? [default: true]
+    B:"*SRPExtra"=true
+
+    # Replace the original entity spawning from SRP with the custom SRPExtra. [default: false]
+    B:"*useSRPExtraEntitySpawn"=false
 
     # Add a list of SRPExtra Addons phase spawn? [default: true]
     B:":addSRPExtraAddonsPhaseSpawnList"=true
@@ -53,6 +71,45 @@ main {
 
 
 ##########################################################################################################
+# merge_system
+#--------------------------------------------------------------------------------------------------------#
+# Merge System 
+#  The Assimilated have the ability to learn from their battles and if the conditions are met, they will 
+#  start to melt until they're some Moving Flesh 
+#  If 2 of these things meet, they will fuse together and grow, if they get big enough they will spawn 
+#  a mob from the Mob List.
+#  
+#  Conditions for the Assimilated to turn into Moving Flesh: 
+#  
+#  -The first condition: the Assimilated needs to reach the primitive killcount. 
+#  -The second condition: it needs to be next to 3 more Assimilated, regardless of their killcount/specie 
+#  OR it needs to be next to a Moving Flesh. 
+#  If the Assimilated with the killcount is next to atleast 3 more Assimilated, the four of them will start 
+#  to melt BUT if it is next to a Moving flesh, only it will start to melt.
+##########################################################################################################
+
+merge_system {
+    # Assimilated mob list with their values used in the merge system to spawn mobs. Ex. "srparasites:infhuman;22"  Where: 
+    #  "srparasites:infhuman" is for the entity (only works for Assimilated versions minus Big Spider, Enderdragon), 
+    #  "22" is for the value the Moving Flesh will have (value must be an integer). 
+    #  [default: [srpextra:sim_witch;1], [srpextra:sim_vindicator;1]]
+    S:SRPEMergeInfValues <
+        srpextra:sim_witch;1
+        srpextra:sim_vindicator;1
+     >
+
+    # Mob list used in the merge system to spawn mobs. Ex. "minecraft:zombie;11"  Where: 
+    #  "minecraft:zombie" is for the entity, 
+    #  "11" is for the value the entity has (value must be an integer). 
+    #  Each Assimilated has a value, the value then passes to the Moving Flesh and when 2 Moving Flesh merge together both values will add up
+    #  If the value matches one in the list, the corresponding entity will spawn, else it will be a random one. 
+    #  [default: ]
+    S:SRPEMergeMobTable <
+     >
+}
+
+
+##########################################################################################################
 # phase
 #--------------------------------------------------------------------------------------------------------#
 # Phase Settings  Ex. "25;srparasites:fer_human;2;5;0;0,1,-1;minecraft:forest,minecraft:ocean"  Where:
@@ -76,43 +133,57 @@ phase {
     S:"Phase 1" <
      >
 
-    # Custom SRPExtra Phase 2 Spawn Entity List [default: [5;srpextra:sim_witch;1;2;0;all;all], [2;srpextra:hijacked_creeper;1;2;0;all;all], [2;srpextra:hijacked_skeleton;1;2;0;all;all], [1;srpextra:stalker;1;2;0;all;all]]
+    # Custom SRPExtra Phase 2 Spawn Entity List [default: [3;srpextra:sim_vindicator;1;2;0;all;spooky], [1;srpextra:sim_evoker;1;1;0;all;spooky], [5;srpextra:sim_witch;1;2;0;all;all], [2;srpextra:hijacked_creeper;1;2;0;all;all], [3;srpextra:hijacked_skeleton_stray;1;2;0;all;cold,hills], [2;srpextra:hijacked_skeleton;1;2;0;all;all], [2;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 2" <
+        3;srpextra:sim_vindicator;1;2;0;all;spooky
+        1;srpextra:sim_evoker;1;1;0;all;spooky
         5;srpextra:sim_witch;1;2;0;all;all
         2;srpextra:hijacked_creeper;1;2;0;all;all
+        3;srpextra:hijacked_skeleton_stray;1;2;0;all;cold,hills
         2;srpextra:hijacked_skeleton;1;2;0;all;all
-        1;srpextra:stalker;1;2;0;all;all
+        2;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 3 Spawn Entity List [default: [8;srpextra:sim_witch;1;2;0;all;all], [5;srpextra:hijacked_creeper;1;2;0;all;all], [5;srpextra:hijacked_skeleton;1;3;0;all;all], [25;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
+    # Custom SRPExtra Phase 3 Spawn Entity List [default: [5;srpextra:sim_vindicator;1;3;0;all;spooky], [3;srpextra:sim_evoker;1;1;0;all;spooky], [8;srpextra:sim_witch;1;2;0;all;all], [5;srpextra:hijacked_creeper;1;2;0;all;all], [5;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills], [5;srpextra:hijacked_skeleton;1;3;0;all;all], [25;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [4;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 3" <
+        5;srpextra:sim_vindicator;1;3;0;all;spooky
+        3;srpextra:sim_evoker;1;1;0;all;spooky
         8;srpextra:sim_witch;1;2;0;all;all
         5;srpextra:hijacked_creeper;1;2;0;all;all
+        5;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills
         5;srpextra:hijacked_skeleton;1;3;0;all;all
         25;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
-        2;srpextra:stalker;1;2;0;all;all
+        4;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 4 Spawn Entity List [default: [10;srpextra:sim_witch;1;3;0;all;all], [8;srpextra:hijacked_creeper;1;3;0;all;all], [15;srpextra:hijacked_skeleton;1;3;0;all;all], [30;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
+    # Custom SRPExtra Phase 4 Spawn Entity List [default: [5;srpextra:sim_vindicator;1;3;0;all;spooky], [3;srpextra:sim_evoker;1;1;0;all;spooky], [10;srpextra:sim_witch;1;2;0;all;all], [8;srpextra:hijacked_creeper;1;3;0;all;all], [5;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills], [5;srpextra:hijacked_skeleton;1;3;0;all;all], [30;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [4;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 4" <
-        10;srpextra:sim_witch;1;3;0;all;all
+        5;srpextra:sim_vindicator;1;3;0;all;spooky
+        3;srpextra:sim_evoker;1;1;0;all;spooky
+        10;srpextra:sim_witch;1;2;0;all;all
         8;srpextra:hijacked_creeper;1;3;0;all;all
-        15;srpextra:hijacked_skeleton;1;3;0;all;all
+        5;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills
+        5;srpextra:hijacked_skeleton;1;3;0;all;all
         30;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
-        2;srpextra:stalker;1;2;0;all;all
+        4;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 5 Spawn Entity List [default: [8;srpextra:sim_witch;1;2;0;all;all], [10;srpextra:hijacked_creeper;1;3;0;all;all], [15;srpextra:hijacked_skeleton;1;3;0;all;all], [35;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [2;srpextra:stalker;1;2;0;all;all]]
+    # Custom SRPExtra Phase 5 Spawn Entity List [default: [8;srpextra:sim_vindicator;1;5;0;all;spooky], [5;srpextra:sim_evoker;1;1;0;all;spooky], [8;srpextra:sim_witch;1;3;0;all;all], [5;srpextra:hijacked_creeper;1;2;0;all;all], [4;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills], [4;srpextra:hijacked_skeleton;1;3;0;all;all], [35;srparasites:pri_devourer;1;2;1;all;ocean,beach,river], [3;srpextra:stalker;1;2;0;all;all]]
     S:"Phase 5" <
-        8;srpextra:sim_witch;1;2;0;all;all
-        10;srpextra:hijacked_creeper;1;3;0;all;all
-        15;srpextra:hijacked_skeleton;1;3;0;all;all
+        8;srpextra:sim_vindicator;1;5;0;all;spooky
+        5;srpextra:sim_evoker;1;1;0;all;spooky
+        8;srpextra:sim_witch;1;3;0;all;all
+        5;srpextra:hijacked_creeper;1;2;0;all;all
+        4;srpextra:hijacked_skeleton_stray;1;3;0;all;cold,hills
+        4;srpextra:hijacked_skeleton;1;3;0;all;all
         35;srparasites:pri_devourer;1;2;1;all;ocean,beach,river
-        2;srpextra:stalker;1;2;0;all;all
+        3;srpextra:stalker;1;2;0;all;all
      >
 
-    # Custom SRPExtra Phase 6 Spawn Entity List [default: [40;srparasites:pri_devourer;1;3;1;all;ocean,beach,river]]
+    # Custom SRPExtra Phase 6 Spawn Entity List [default: [10;srpextra:sim_vindicator;1;5;0;all;spooky], [8;srpextra:sim_evoker;1;2;0;all;spooky], [40;srparasites:pri_devourer;1;3;1;all;ocean,beach,river]]
     S:"Phase 6" <
+        10;srpextra:sim_vindicator;1;5;0;all;spooky
+        8;srpextra:sim_evoker;1;2;0;all;spooky
         40;srparasites:pri_devourer;1;3;1;all;ocean,beach,river
      >
 
@@ -181,8 +252,9 @@ phasefix {
         srparasites:carrier_colony
      >
 
-    # Selected entities will be removed from the SRP Phase Spawn Entity List [default: [srparasites:sim_dragone], [srparasites:thrall], [srparasites:architect], [srparasites:bomber_heavy], [srparasites:wraith], [srparasites:bogle], [srparasites:haunter], [srparasites:carrier_colony]]
+    # Selected entities will be removed from the SRP Phase Spawn Entity List [default: [srparasites:fer_wolf], [srparasites:sim_dragone], [srparasites:thrall], [srparasites:architect], [srparasites:bomber_heavy], [srparasites:wraith], [srparasites:bogle], [srparasites:haunter], [srparasites:carrier_colony]]
     S:" 5 list fix" <
+        srparasites:fer_wolf
         srparasites:sim_dragone
         srparasites:thrall
         srparasites:architect
@@ -237,6 +309,29 @@ phasefix {
     S:"10 list fix" <
         srparasites:fer_wolf
         srparasites:architect
+     >
+}
+
+
+##########################################################################################################
+# status_effects
+#--------------------------------------------------------------------------------------------------------#
+# Victim
+##########################################################################################################
+
+status_effects {
+    # Table that will be used for converting mobs, the Rupter will also be using this. [default: [minecraft:witch;srpextra:sim_witch], [minecraft:vindication_illager;srpextra:sim_vindicator], [minecraft:evocation_illager;srpextra:sim_evoker]]
+    S:cothVictim <
+        minecraft:witch;srpextra:sim_witch
+        minecraft:vindication_illager;srpextra:sim_vindicator
+        minecraft:evocation_illager;srpextra:sim_evoker
+     >
+
+    # Table that will be used for hijacking mobs. [default: [minecraft:stray;srpextra:hijacked_skeleton_stray], [minecraft:creeper;srpextra:hijacked_creeper], [minecraft:skeleton;srpextra:hijacked_skeleton]]
+    S:hijackedVictim <
+        minecraft:stray;srpextra:hijacked_skeleton_stray
+        minecraft:creeper;srpextra:hijacked_creeper
+        minecraft:skeleton;srpextra:hijacked_skeleton
      >
 }
 
