--- a/.minecraft/config/srpextra/SRPQuarkConfigSystem.cfg
+++ b/.minecraft/config/srpextra/SRPQuarkConfigSystem.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.0
+~CONFIG_VERSION: 1.1
 
 ##########################################################################################################
 # +main
@@ -11,6 +11,47 @@
 ##########################################################################################################
 
 "+main" {
+}
+
+
+##########################################################################################################
+# merge_system
+#--------------------------------------------------------------------------------------------------------#
+# Merge System 
+#  The Assimilated have the ability to learn from their battles and if the conditions are met, they will 
+#  start to melt until they're some Moving Flesh 
+#  If 2 of these things meet, they will fuse together and grow, if they get big enough they will spawn 
+#  a mob from the Mob List.
+#  
+#  Conditions for the Assimilated to turn into Moving Flesh: 
+#  
+#  -The first condition: the Assimilated needs to reach the primitive killcount. 
+#  -The second condition: it needs to be next to 3 more Assimilated, regardless of their killcount/specie 
+#  OR it needs to be next to a Moving Flesh. 
+#  If the Assimilated with the killcount is next to atleast 3 more Assimilated, the four of them will start 
+#  to melt BUT if it is next to a Moving flesh, only it will start to melt.
+##########################################################################################################
+
+merge_system {
+    # Assimilated mob list with their values used in the merge system to spawn mobs. Ex. "srparasites:infhuman;22"  Where: 
+    #  "srparasites:infhuman" is for the entity (only works for Assimilated versions minus Big Spider, Enderdragon), 
+    #  "22" is for the value the Moving Flesh will have (value must be an integer). 
+    #  [default: [srpquark:sim_crab;1], [srpquark:sim_frog;1], [srpquark:sim_archaeologist;1], [srpquark:sim_dweller;1]]
+    S:SRPQMergeInfValues <
+        srpquark:sim_crab;1
+        srpquark:sim_frog;1
+        srpquark:sim_archaeologist;1
+        srpquark:sim_dweller;1
+     >
+
+    # Mob list used in the merge system to spawn mobs. Ex. "minecraft:zombie;11"  Where: 
+    #  "minecraft:zombie" is for the entity, 
+    #  "11" is for the value the entity has (value must be an integer). 
+    #  Each Assimilated has a value, the value then passes to the Moving Flesh and when 2 Moving Flesh merge together both values will add up
+    #  If the value matches one in the list, the corresponding entity will spawn, else it will be a random one. 
+    #  [default: ]
+    S:SRPQMergeMobTable <
+     >
 }
 
 
@@ -46,6 +87,36 @@ quark_phase_spawn_list {
 
     #  [default: true]
     B:addSRPQuarkPhaseList=true
+}
+
+
+##########################################################################################################
+# status_effects
+#--------------------------------------------------------------------------------------------------------#
+# Victim
+##########################################################################################################
+
+status_effects {
+    # Mobs that are immune to the COTH effect, Ex: "minecraft:zombie" or just "minecraft" for a whole mod [default: [quark:ashen], [quark:pirate]]
+    S:COTHImmuneList <
+        quark:ashen
+        quark:pirate
+     >
+
+    # Table that will be used for converting mobs, the Rupter will also be using this. [default: [quark:archaeologist;srpquark:sim_archaeologist], [quark:stoneling;srpquark:sim_stoneling], [quark:frog;srpquark:sim_frog], [quark:crab;srpquark:sim_crab], [quark:dweller;srpquark:sim_dweller]]
+    S:cothVictim <
+        quark:archaeologist;srpquark:sim_archaeologist
+        quark:stoneling;srpquark:sim_stoneling
+        quark:frog;srpquark:sim_frog
+        quark:crab;srpquark:sim_crab
+        quark:dweller;srpquark:sim_dweller
+     >
+
+    # Table that will be used for hijacking mobs. [default: [quark:ashen;srpquark:hijacked_skeleton_ashen], [quark:pirate;srpquark:hijacked_skeleton_pirate]]
+    S:hijackedVictim <
+        quark:ashen;srpquark:hijacked_skeleton_ashen
+        quark:pirate;srpquark:hijacked_skeleton_pirate
+     >
 }
 
 
