Mystical Agriculture Integrations
Added Mystical Agriculture Crops for GalaxySpace, Bewitchment, and Thaumcraft Materials

Changed Twilight Forest to no longer force progression

Buffed Particle Accelerator Electromagnet Recipe

Fixed Radioactive Comb Again

Added Spellchecker

Made it so Mystical Agriculture crops that give space resources have to be grown in a space dimension.

Various Late Game quest text

Might have made it so that dust pollution clears more quickly

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,25 @@
 instance.cfg
 mmc-pack.json
 /.minecraft/screenshots
+.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
+.minecraft/config/AppliedEnergistics2/VersionChecker.cfg
+.minecraft/config/astralsorcery/amulet_enchantments.cfg
+.minecraft/config/fantasticlib/reference/blocks.txt
+.minecraft/config/fantasticlib/reference/blockstates.txt
+.minecraft/config/fantasticlib/reference/blockstates.txt
+.minecraft/config/fantasticlib/reference/enchantments.txt
+.minecraft/config/fantasticlib/reference/entities.txt
+.minecraft/config/fantasticlib/reference/items.txt
+.minecraft/config/fantasticlib/reference/oredict.txt
+.minecraft/config/fantasticlib/reference/potion_types.txt
+.minecraft/config/fantasticlib/reference/recipes.txt
+.minecraft/config/fantasticlib/reference/villager_professions.txt
+.minecraft/config/jei/worldSettings.cfg
+.minecraft/config/InvTweaks.cfg
+.minecraft/config/ichunutil.cfg
+.minecraft/config/splash.properties
+.minecraft/config/thaumicjei_itemstack_aspects.json
+.minecraft/hei_bookmarks.ini
+.minecraft/impossible_data/what_is_this_folder.txt
+.minecraft/options.txt
+instance.cfg
