--- a/.minecraft/config/mysticalcreations.cfg
+++ b/.minecraft/config/mysticalcreations.cfg
@@ -29,6 +29,16 @@ compat {
     S:CUSTOM_SEED_LIST <
         cake;2;724C1B;null;null
         witch;4;2E0365;null;minecraft:witch
+	dolomite;5;ecc4a6;null;null
+	solar;5;f38846;null;null
+	volcanic;5;7e1707;null;null
+	unknown_crystal;5;29b482;null;null
+	amethyst;3;9f59b8;null;null
+	garnet;3;7e221a;null;null
+	opal;3;c1e8e7;null;null
+	salt;2;f6f6f6;null;null
+	cinnabar;3;DE4743;null;null
+	vis;3;863295;null;null
      >
 }
 
