--- a/.minecraft/config/restrictedcrops.cfg
+++ b/.minecraft/config/restrictedcrops.cfg
@@ -28,6 +28,21 @@ general {
 
     # Crop Rules. Format is <modid>:<registry_name>:<meta>=[dimension1|biome1,dimension2|biome2, ... , dimensionN|biomeN]. Visit Wiki at https://github.com/michelegargiulo/RestrictedCrops/wiki for more information
     S:rawRules <
+        mysticalagriculture:draconium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:uranium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:lithium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:boron_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:thorium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:magnesium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:titanium_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:meteoric_iron_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:desh_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:certus_quartz_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalagriculture:cobalt_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalcreations:dolomite_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalcreations:solar_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalcreations:volcanic_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
+        mysticalcreations:unknown_crystal_seeds=-28|*,-29|*,-30|*,-31|*,-1007|*,-1009|*,-1015|*,-1023|*,-1007|*,-1012|*,-1008|*,-1014|*,-1017|*,-1018|*,-1024|*,-1005|*,-1022|*,-1024|*,-10|*
      >
 
     # If true, when a player bonemeals a crop that cannot grow there, a localized message will be printed in the chat to that player, explaining just that
