--- a/.minecraft/config/thaumcraft_world.cfg
+++ b/.minecraft/config/thaumcraft_world.cfg
@@ -22,7 +22,7 @@ general {
     B:generateAmber=false
     B:generateAura=true
     B:generateCinnabar=false
-    B:generateCrystals=true
+    B:generateCrystals=false
     B:generateMagicForest=true
     B:generateQuartz=false
     B:generateStructure=true
