--- a/.minecraft/config/ebwizardry/ebwizardry.cfg
+++ b/.minecraft/config/ebwizardry/ebwizardry.cfg
@@ -8,6 +8,48 @@
 
 artefacts {
     # Set to false to disable this item
+    B:"arcaneapprentices:amulet_survival_chance"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:belt_explorer"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:belt_strength"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_bag_27"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_bag_9"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_eternal_grimoire"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_golden_lure"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_itinerary"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_seal_of_fate"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_spell_compass"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_talent_detector"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:charm_withering_atlas"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:head_knowledge"=true
+
+    # Set to false to disable this item
+    B:"arcaneapprentices:ring_serendipity"=true
+
+    # Set to false to disable this item
     B:"ebwizardry:amulet_absorption"=true
 
     # Set to false to disable this item
@@ -793,6 +835,9 @@ spells {
 
     # Set to false to disable this spell
     B:"arcane_essentials:zoom"=true
+
+    # Set to false to disable this spell
+    B:"arcaneapprentices:recall_apprentices"=true
 
     # Set to false to disable this spell
     B:"ebwizardry:agility"=true
