Food Overhaul Mark 1
Changed Hunger and Saturation Value of every food item. The purpose of this is to rebalance food items so that easy foods are weaker than more complicated foods. Foods have also been standardized, fruit veg give 2 points while cooked meats and bread give 4. Work has been put into applying ore dictionary to different foods/crops.

Plan to revisit if the idea for locking ingredients behind tech tree has support.

Updated SRP addons

Added Camera Mod

Updated ZenUtils

Made Twilight Forest Deer drop PHC venison.

Readded I&F support for Spartan Weaponry (whoopsie)

Removed Customizable Bees since it had no documentation on how to use it.

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,37 @@ mmc-pack.json
 .minecraft/impossible_data/what_is_this_folder.txt
 .minecraft/options.txt
 instance.cfg
+.minecraft/config/adpother/Biomes/jeid$error_biome.cfg
+.minecraft/config/AppliedEnergistics2/CustomRecipes.cfg
+.minecraft/config/AppliedEnergistics2/items.csv
+.minecraft/config/AppliedEnergistics2/VersionChecker.cfg
+.minecraft/config/astralsorcery/amulet_enchantments.cfg
+.minecraft/config/fantasticlib/reference/blocks.txt
+.minecraft/config/fantasticlib/reference/blockstates.txt
+.minecraft/config/fantasticlib/reference/enchantments.txt
+.minecraft/config/fantasticlib/reference/entities.txt
+.minecraft/config/fantasticlib/reference/items.txt
+.minecraft/config/fantasticlib/reference/keybinds.txt
+.minecraft/config/fantasticlib/reference/oredict.txt
+.minecraft/config/fantasticlib/reference/potion_types.txt
+.minecraft/config/fantasticlib/reference/potions.txt
+.minecraft/config/fantasticlib/reference/recipes.txt
+.minecraft/config/fantasticlib/reference/sounds.txt
+.minecraft/config/fantasticlib/reference/villager_professions.txt
+.minecraft/config/ichunutil.cfg
+.minecraft/config/InvTweaks.cfg
+.minecraft/config/jei/jei.cfg
+.minecraft/config/jei/worldSettings.cfg
+.minecraft/config/splash.properties
+.minecraft/config/srpextra/SRPEConfigSystem.cfg
+.minecraft/config/srpextra/SRPEConfigMobs.cfg
+.minecraft/config/srpextra/SRPEConfigItems.cfg
+.minecraft/config/srpextra/SRPEConfigGraphic.cfg
+/.minecraft/dumps
+.minecraft/config/thaumicjei_itemstack_aspects.json
+.minecraft/config/ZenUtils.cfg
+.minecraft/crafttweaker.log
+.minecraft/groovy.log
+.minecraft/journeymap/config/5.7/journeymap.minimap.config
+.minecraft/hei_bookmarks.ini
+.minecraft/impossible_data/what_is_this_folder.txt
